--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
+    "frontend": "file:",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
